# hypermodern-python-vb

./: .flake8  .gitignore  LICENSE  Makefile  README.md  noxfile.py  pyproject.toml
.github/workflows/: release-drafter.yml
docs/: conf.py  reference.rst
src/hypermodern_python_vb/: __init__.py  console.py  wikipedia.py
src/hypermodern_python_vb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_console.py  test_wikipedia.py
