[tool.poetry]
name = "hypermodern-python-vb"
version = "0.1.0"
description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/vinceatbluelabs/hypermodern-python-vb"
repository = "https://github.com/vinceatbluelabs/hypermodern-python-vb"
keywords = ["hypermodern"]
authors = ["Vince Broz <vince.broz@bluelabs.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
