[tool.poetry]
name = "hypermodern-python-vb"
version = "0.1.0"
description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/vinceatbluelabs/hypermodern-python-vb"
repository = "https://github.com/vinceatbluelabs/hypermodern-python-vb"
keywords = ["hypermodern"]
authors = ["Vince Broz <vince.broz@bluelabs.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.10.0"
pytest-mock = "^3.1.1"

[tool.poetry.scripts]
hypermodern-python-vb = "hypermodern_python_vb.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_python_vb"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
