[tool.poetry]
name = "hypermodern-python-vb"
version = "0.1.0"
description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/vinceatbluelabs/hypermodern-python-vb"
repository = "https://github.com/vinceatbluelabs/hypermodern-python-vb"
keywords = ["hypermodern"]
authors = ["Vince Broz <vince.broz@bluelabs.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
requests = "^2.24.0"
desert = "^2020.1.6"
marshmallow = "^3.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.10.0"
pytest-mock = "^3.1.1"
black = "^19.10b0"
flake8 = "^3.8.3"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.0"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.9.0"
mypy = "^0.782"
pytype = {version = "^2020.6.1", python = "3.7"}
typeguard = "^2.9.1"
flake8-annotations = "^2.1.0"
flake8-docstrings = "^1.5.0"
darglint = "^1.4.1"
xdoctest = "^0.12.0"
sphinx = "^3.1.1"
sphinx-autodoc-typehints = "^1.11.0"

[tool.poetry.scripts]
hypermodern-python-vb = "hypermodern_python_vb.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_python_vb"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
